Emrald_Site/styles/help.css
/*Copyright 2021 Battelle Energy Alliance*/


body {
	font-family:Arial Unicode MS,Arial,Helvetica;
	font-size:10pt;
}



.showmodal
{    
  top:0px;
  left:0px; 
  width:100%;
  height:100%;

  z-index:1000;
  position:absolute;
  background-color:transparent;
  display:block;      
}    
 
.hidemodal
{    
  display:none;
}      
   
.OverlayEffect
{    
  background-color: black; 
  filter: alpha(opacity=70);
  opacity: 0.2;     
  width:100%;    
  height:100%;  
  z-index:1000;  
  position:absolute; 
  top:0;  
  left:0;   
}

.codePanel {
  font-family: monospace;
  white-space: nowrap;
}

